[package]
name = "orm"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
datadog-logs = { version = "0.2", features = ["nonblocking"] }
regex = "1"
chrono = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["http1", "http2", "client", "runtime"] }
hyper-tls = "0.5.0"
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tar = "0.4"
flate2 = "1"
semver = "1"

# TODO: Strict compilation options
